Changed question editor to support editing existing questions rather than just creating new questions. Looks like saving fails for old questions, no idea why.

--- a/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -8,6 +8,9 @@
     		<td wicket:id="questionPrompt">What is your first name?</td>
     		<td wicket:id="questionResponseType">TEXT</td>
     	</tr>
+    	<tr>
+    		<td><a href="#" wicket:id="newQuestion">New question</a></td>
+    	</tr>
     </table>
     	
     <div wicket:id="feedback"/>
