InterviewingEgoPage asks the first ego question, but doesn't yet process the answer.

--- a/src/main/java/net/sf/egonet/web/panel/TextAnswerFormFieldPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/TextAnswerFormFieldPanel.html
@@ -1,4 +1,7 @@
 <wicket:panel>
-	<span wicket:id="prompt">First name</span>
-	<input wicket:id="answer" type="text" />
+	<fieldset>
+		<legend><span wicket:id="prompt">First name</span></legend>
+		Textual answer:
+		<input wicket:id="answer" type="text" />
+	</fieldset>
 </wicket:panel>
