Added mockup of question options editor.

--- a/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -2,11 +2,12 @@
 	
 	<table border="1">
     	<caption wicket:id="caption">Questions</caption>
-    	<tr><th>Title</th><th>Prompt</th><th>Response Type</th></tr>
+    	<tr><th>Title</th><th>Prompt</th><th>Response Type</th><th>Options</th></tr>
     	<tr wicket:id="questions">
     		<td><a href="#" wicket:id="questionLink"><span wicket:id="questionTitle">First Name</span></a></td>
     		<td wicket:id="questionPrompt">What is your first name?</td>
     		<td wicket:id="questionResponseType">TEXT</td>
+    		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
     	</tr>
     	<tr>
     		<td><a href="#" wicket:id="newQuestion">New question</a></td>
