Added study and question fields to Expression. Created buttons for opening an expression editor. Still need expression editor implementations for each of the expression types: Text, Number, Selection, and Compound.

--- a/src/main/java/net/sf/egonet/web/panel/ExpressionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/ExpressionsPanel.html
@@ -17,6 +17,11 @@
     	 				<select wicket:id="questionField" id="questionField" />
     				</td>
     			</tr>
+    			<tr>
+    				<td colspan="3">
+    					<input wicket:id="newCompoundExpression" type="submit" value="New compound expression"/>
+    				</td>
+    			</tr>
     		</table>
     	</fieldset>
     </form>
