Added support for changing or deleting expressions that have already been created.

--- a/src/main/java/net/sf/egonet/web/panel/TextExpressionEditorPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/TextExpressionEditorPanel.html
@@ -3,8 +3,7 @@
 	<form wicket:id="form">
 		<fieldset>
 			<legend>
-				Expression about textual question: 
-				<span wicket:id="questionName">question_name</span>
+				<span wicket:id="editorLegend">expression about question_name</span>
 			</legend>
 			<div wicket:id="feedback"/>
 			<label for="expressionNameField">Name:</label>
