--- a/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -8,6 +8,8 @@
     		<td wicket:id="questionPrompt">What is your first name?</td>
     		<td wicket:id="questionResponseType">TEXT</td>
     		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
+			<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
+			<td><a href="#" wicket:id="questionDelete">Delete</a></td>
     	</tr>
     	<tr>
     		<td><a href="#" wicket:id="newQuestion">New question</a></td>
