Added a delete-all link to the list of options for a question.

--- a/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
@@ -13,6 +13,11 @@
 								<a href="#" wicket:id="optionMoveUp">Move up</a>
 							</td>
 						</tr>
+						<tr>
+							<td>
+								<a href="#" wicket:id="optionDeleteAll">Delete all</a>
+							</td>
+						</tr>
 					</table>
 				</td>
 				
