--- a/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
@@ -36,6 +36,16 @@
 							</li>
 						</ul>
 					</fieldset>
+					<fieldset>
+						<legend>Copy from another question</legend>
+						<ul>
+							<li wicket:id="otherQuestions">
+								<a href="#" wicket:id="copyFromOtherQuestion">
+									<span wicket:id="otherQuestionName">Gender</span>
+								</a>
+							</li>
+						</ul>
+					</fieldset>
 				</td>
 			</tr>
 		</table>
