--- a/src/main/java/net/sf/egonet/web/panel/CompoundExpressionEditorPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/CompoundExpressionEditorPanel.html
@@ -9,7 +9,10 @@
 			<label for="expressionNameField">Name:</label>
     	 	<input wicket:id="expressionNameField" id="expressionNameField" type="text" />
     	 	<br />
+    	 	<br />
+    	 	Expression is true if
     	 	<select wicket:id="expressionOperatorField" />
+    	 	of the selected expressions below are true:
     	 	<div wicket:id="expressionValueField">List of subexpression checkboxes</div>
     	 	<br />
     		<input wicket:id="saveExpression" type="submit" value="Save"/>
