--- a/src/main/java/net/sf/egonet/web/panel/TextExpressionEditorPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/TextExpressionEditorPanel.html
@@ -9,8 +9,14 @@
 			<label for="expressionNameField">Name:</label>
     	 	<input wicket:id="expressionNameField" id="expressionNameField" type="text" />
     	 	<br />
+    	 	<br />
+    	 	<span wicket:id="expressionOperatorPreface">Expression is true for an answer that is</span>
     	 	<select wicket:id="expressionOperatorField" />
     	 	<input wicket:id="expressionValueField" type="text" />
+    	 	<br />
+    	 	<br />
+    	 	Expression is <select wicket:id="expressionUnansweredField" /> if the question is unanswered.
+    	 	<br />
     	 	<br />
     		<input wicket:id="saveExpression" type="submit" value="Save"/>
 		</fieldset>
