Question options now have a value field which will be used in place of the name when exporting respondant data for analysis by external programs. Also, it is now possible to edit question options.

--- a/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditQuestionOptionsPanel.html
@@ -12,6 +12,7 @@
 								<td>
 									<a href="#" wicket:id="optionDelete">Delete</a>
 									<a href="#" wicket:id="optionMoveUp">Move up</a>
+									<a href="#" wicket:id="optionEdit">Edit</a>
 								</td>
 							</tr>
 							<tr>
@@ -25,7 +26,10 @@
 				
 				<td>
 					<form wicket:id="addOptionForm">
-    	 				<input wicket:id="optionTitleField" type="text" /><br />
+						<label for="optionTitleField">Name:</label>
+    	 				<input wicket:id="optionTitleField" id="optionTitleField" type="text" /><br />
+						<label for="optionValueField">Value:</label>
+    	 				<input wicket:id="optionValueField" id="optionValueField" type="text" /><br />
 						<input wicket:id="addOption" type="submit" value="Add option"/>
 					</form>
 					
@@ -52,6 +56,18 @@
 				</td>
 			</tr>
 		</table>
+		<div wicket:id="editOptionContainer">
+			<form wicket:id="editOptionForm">
+				<fieldset>
+					<legend><span wicket:id="editOptionLegend">Editing an option</span></legend>
+					<label for="editOptionTitleField">Name:</label>
+    	 			<input wicket:id="editOptionTitleField" id="editOptionTitleField" type="text" /><br />
+					<label for="editOptionValueField">Value:</label>
+    	 			<input wicket:id="editOptionValueField" id="editOptionValueField" type="text" /><br />
+					<input wicket:id="editOption" type="submit" value="Save option"/>
+				</fieldset>
+			</form>
+		</div>
 	</fieldset>
 
 </wicket:panel>
