Added hints to the question editor about how to insert alter names.

--- a/src/main/java/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -19,6 +19,9 @@
     	 			</td>
     	 			<td>
     					<label for="questionPromptField">Prompt</label>
+    					<span wicket:id="promptHelpText">
+    						Hints about alter replacement, sensitive to question subject type
+    					</span>
     					<br />
     					<textarea wicket:id="questionPromptField" id="questionPromptField"></textarea>
     	 			</td>
