Answer form field panels are smaller, more horizontal, and no longer include question prompts.

--- a/src/main/java/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -1,6 +1,8 @@
 <wicket:panel>
-	<div wicket:id="checkboxes">
+	<span wicket:id="checkboxes" style="float:left; margin-right:3em">
 		<input wicket:id="checkField" type="checkbox" />
 		<span wicket:id="checkLabel">Label</span>
-	</div>
+	</span>
+	<div style="clear:both"></div>
+	<br />
 </wicket:panel>
