--- a/src/main/java/net/sf/egonet/web/panel/TextAnswerFormFieldPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/TextAnswerFormFieldPanel.html
@@ -1,7 +1,3 @@
 <wicket:panel>
-	<fieldset>
-		<legend><span wicket:id="prompt">First name</span></legend>
-		Textual answer:
-		<input wicket:id="answer" type="text" />
-	</fieldset>
+	<input wicket:id="answer" type="text" /> (text)
 </wicket:panel>
