--- a/src/main/java/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
@@ -1,7 +1,3 @@
 <wicket:panel>
-	<fieldset>
-		<legend><span wicket:id="prompt">Tools</span></legend>
-		Multiple selection answer:
-		<div wicket:id="answer">List of options</div>
-	</fieldset>
+		<span wicket:id="answer">List of options</span>
 </wicket:panel>
