--- a/src/main/java/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
@@ -1,7 +1,3 @@
 <wicket:panel>
-	<fieldset>
-		<legend><span wicket:id="prompt">Age</span></legend>
-		Numerical answer:
-		<input wicket:id="answer" type="text" />
-	</fieldset>
+	<input wicket:id="answer" type="text" /> (number)
 </wicket:panel>
