--- a/src/main/java/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -5,9 +5,9 @@
     <form wicket:id="questionForm">
     	<fieldset>
     		<legend>Question</legend>
-    		<table>
+    		<table width="100%">
     	 		<tr>
-    	 			<td>
+    	 			<td width="50%">
     	 				<label for="questionTitleField">Title:</label>
     	 				<input wicket:id="questionTitleField" id="questionTitleField" type="text" />
     	 				<br />
@@ -17,7 +17,7 @@
     	 				<label for="questionAnswerReasonField">When to answer question:</label>
     	 				<select wicket:id="questionAnswerReasonField" id="questionAnswerReasonField" />
     	 			</td>
-    	 			<td>
+    	 			<td width="50%">
     					<label for="questionPromptField">Prompt</label>
     					<span wicket:id="promptHelpText">
     						Hints about alter replacement, sensitive to question subject type
