--- a/src/main/java/net/sf/egonet/web/panel/StudySettingsPanel.html
+++ b/src/main/java/net/sf/egonet/web/panel/StudySettingsPanel.html
@@ -5,40 +5,40 @@
     <form wicket:id="form">
     	<fieldset>
     		<legend>Study Settings</legend>
-    		<table>
+    		<table width="100%">
     			<tr>
-    				<th><label for="introductionField">Introduction (optional)</label></th>
-    				<th><label for="egoIdField">EgoId prompt</label></th>
+    				<th width="50%"><label for="introductionField">Introduction (optional)</label></th>
+    				<th width="50%"><label for="egoIdField">EgoId prompt</label></th>
     			</tr>
     			<tr>
-    				<td>
+    				<td width="50%">
     					<textarea wicket:id="introductionField" id="introductionField"></textarea>
     				</td>
-    				<td>
+    				<td width="50%">
     					<textarea wicket:id="egoIdField" id="egoIdField"></textarea>
     				</td>
     			</tr>
     			<tr>
-    				<th><label for="alterpromptField">Alter prompt</label></th>
-    				<th><label for="conclusionField">Conclusion</label></th>
+    				<th width="50%"><label for="alterpromptField">Alter prompt</label></th>
+    				<th width="50%"><label for="conclusionField">Conclusion</label></th>
     			</tr>
     			<tr>
-    				<td>
+    				<td width="50%">
     					<textarea wicket:id="alterPromptField" id="alterpromptField"></textarea>
     				</td>
-    				<td>
+    				<td width="50%">
     					<textarea wicket:id="conclusionField" id="conclusionField"></textarea>
     				</td>
     			</tr>
     	 		<tr>
-    	 			<td>
+    	 			<td width="50%">
     	 				<label for="minAltersField">Min alters:</label>
     	 				<input wicket:id="minAltersField" id="minAltersField" type="text" />
     	 				<br />
     	 				<label for="maxAltersField">Max alters:</label>
     	 				<input wicket:id="maxAltersField" id="maxAltersField" type="text" />
     	 			</td>
-    	 			<td>
+    	 			<td width="50%">
     	 				<label for="adjacencyField">Alters are adjacent when:</label>
     	 				<select wicket:id="adjacencyField" id="adjacencyField" />
     	 				<p>(Use an expression, created in the Expressions menu, as an adjacency reason)</p>
