Added askingStyleList property to question.

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -16,6 +16,9 @@
     	 				<br />
     	 				<label for="questionAnswerReasonField">When to answer question:</label>
     	 				<select wicket:id="questionAnswerReasonField" id="questionAnswerReasonField" />
+    	 				<br />
+    	 				<label for="askingStyleListField" wicket:id="askingStyleListLabel">Ask with list of alters:</label>
+    	 				<input wicket:id="askingStyleListField" id= "askingStyleListField" type="checkbox" />
     	 			</td>
     	 			<td width="50%">
     					<label for="questionPromptField">Prompt</label>
