The navigation sidebar is hidden until needed, because it takes too long to build the links.

--- a/src/net/sf/egonet/web/panel/InterviewNavigationPanel.html
+++ b/src/net/sf/egonet/web/panel/InterviewNavigationPanel.html
@@ -1,5 +1,6 @@
 <wicket:panel>
 	<ol>
+		<h2><a href="#" wicket:id="showLinks">Navigation</a></h2>
 		<li wicket:id="pages">
 			<a href="#" wicket:id="pageLink">
 				<span wicket:id="pageName">playing_sports</span>
