Added dont know and refuse options to answer form field panel. Interviewing pages do not yet use this information when saving answers.

--- a/src/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -1,5 +1,5 @@
 <wicket:panel>
-	<span wicket:id="checkboxes" style="float:left; margin-right:3em">
+	<span wicket:id="checkboxes" style="margin-right:3em">
 		<input wicket:id="checkField" type="checkbox" />
 		<span wicket:id="checkLabel">Label</span>
 	</span>
