--- a/src/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
@@ -1,3 +1,5 @@
 <wicket:panel>
-	<input wicket:id="answer" type="text" /> (number)
+	<input wicket:id="answer" type="text" /> 
+	<span style="margin-right:3em">(number)</span>
+	<span wicket:id="refDKCheck">Refuse and dont know checkboxes</span>
 </wicket:panel>
