--- a/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -9,7 +9,9 @@
     		<td wicket:id="questionPrompt">What is your first name?</td>
     		<td wicket:id="questionResponseType">TEXT</td>
     		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
+			<td><a href="#" wicket:id="questionPreview">Preview</a></td>
 			<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
+			<td>___</td>
 			<td><a href="#" wicket:id="questionDelete">Delete</a></td>
     	</tr>
     	<tr>
