Added study settings to indicate what value should be used in statistics output for various types of skipped questions.

--- a/src/net/sf/egonet/web/panel/StudySettingsPanel.html
+++ b/src/net/sf/egonet/web/panel/StudySettingsPanel.html
@@ -44,6 +44,22 @@
     	 				<p>(Use an expression, created in the Expressions menu, as an adjacency reason)</p>
     	 			</td>
     	 		</tr>
+    	 		<tr>
+    	 			<td width="50%">
+    	 				<label for="refusedField">Refused value:</label>
+    	 				<input wicket:id="refusedField" id="refusedField" type="text" />
+    	 				<br />
+    	 				<label for="dontKnowField">Don&#39;t know value:</label>
+    	 				<input wicket:id="dontKnowField" id="dontKnowField" type="text" />
+    	 			</td>
+    	 			<td width="50%">
+    	 				<label for="logicalSkipField">Logical skip value:</label>
+    	 				<input wicket:id="logicalSkipField" id="logicalSkipField" type="text" />
+    	 				<br />
+    	 				<label for="notYetField">Not yet answered value:</label>
+    	 				<input wicket:id="notYetField" id="notYetField" type="text" />
+    	 			</td>
+    	 		</tr>
     		</table>
     		
     		<input wicket:id="saveButton" type="submit" value="Save"/>
