--- a/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -11,6 +11,8 @@
     		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
 			<td><a href="#" wicket:id="questionPreview">Preview</a></td>
 			<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
+			<td><a href="#" wicket:id="questionSelect"><span wicket:id="questionSelectLabel">Select</span></a></td>
+			<td><a href="#" wicket:id="questionPull">Pull</a></td>
 			<td>___</td>
 			<td><a href="#" wicket:id="questionDelete">Delete</a></td>
     	</tr>
