Changed CheckboxesPanel to prevent line breaks between between check boxes and their labels.

--- a/src/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -1,7 +1,9 @@
 <wicket:panel>
-	<span wicket:id="checkboxes" style="margin-right:3em">
-		<input wicket:id="checkField" type="checkbox" />
-		<span wicket:id="checkLabel">Label</span>
+	<span wicket:id="checkboxes" style="margin-right:3em;">
+		<span style="white-space:nowrap;">
+			<input wicket:id="checkField" type="checkbox" />
+			<span wicket:id="checkLabel">Label</span>
+		</span>
 	</span>
 	<div style="clear:both"></div>
 	<br />
