My previous fix for line wrapping within a CheckboxesPanel did not work consistently inside tables. With this additional change, it seems to work within tables as well.

--- a/src/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -4,6 +4,7 @@
 			<input wicket:id="checkField" type="checkbox" />
 			<span wicket:id="checkLabel">Label</span>
 		</span>
+		<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
 	</span>
 	<div style="clear:both"></div>
 	<br />
