--- a/src/net/sf/egonet/web/panel/ExpressionsPanel.html
+++ b/src/net/sf/egonet/web/panel/ExpressionsPanel.html
@@ -22,6 +22,13 @@
     					<input wicket:id="newCompoundExpression" type="submit" value="New compound expression"/>
     				</td>
     			</tr>
+    			<tr>
+    				<td colspan="3">
+    					<input wicket:id="newComparisonExpression" type="submit" value="New comparison expression"/>
+    					about
+    	 				<select wicket:id="comparisonTopicField" id="comparisonTopicField" />
+    				</td>
+    			</tr>
     		</table>
     	</fieldset>
     </form>
