Added counting expression editor.

--- a/src/net/sf/egonet/web/panel/ExpressionsPanel.html
+++ b/src/net/sf/egonet/web/panel/ExpressionsPanel.html
@@ -29,6 +29,11 @@
     	 				<select wicket:id="comparisonTopicField" id="comparisonTopicField" />
     				</td>
     			</tr>
+    			<tr>
+    				<td colspan="3">
+    					<input wicket:id="newCountingExpression" type="submit" value="New counting expression"/>
+    				</td>
+    			</tr>
     		</table>
     	</fieldset>
     </form>
