--- a/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
@@ -1,3 +1,4 @@
 <wicket:extend>
+    	<div wicket:id="checkBoxPrompt">Check some boxes</div>
 		<span wicket:id="answer">List of options</span>
 </wicket:extend>
