--- a/src/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/NumberAnswerFormFieldPanel.html
@@ -1,5 +1,5 @@
 <wicket:extend>
 	<input wicket:id="answer" type="text" /> 
-	<span style="margin-right:3em">(number)</span>
+	<span style="margin-right:3em" wicket:id="numberPrompt" >(number)</span>
 	<span wicket:id="refDKCheck">Refuse and dont know checkboxes</span>
 </wicket:extend>
