Can change the name of a study in the study settings panel.

--- a/src/net/sf/egonet/web/panel/StudySettingsPanel.html
+++ b/src/net/sf/egonet/web/panel/StudySettingsPanel.html
@@ -7,6 +7,14 @@
     		<legend>Study Settings</legend>
     		<table width="100%">
     			<tr>
+    	 			<td width="50%">
+    	 				<label for="nameField"><b>Study name:</b></label>
+    	 				<input wicket:id="nameField" id="nameField" type="text" />
+    				</td>
+    				<td width="50%">
+    				</td>
+    			</tr>
+    			<tr>
     				<th width="50%"><label for="introductionField">Introduction (optional)</label></th>
     				<th width="50%"><label for="egoIdField">EgoId prompt</label></th>
     			</tr>
