Added access key support to multiple selection questions. Need an HTML element that can accept focus from access key without doing anything so we can use access keys to switch between alters in a list-style question.

--- a/src/net/sf/egonet/web/panel/AnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/AnswerFormFieldPanel.html
@@ -1,6 +1,8 @@
 <wicket:panel>
 	<b><span wicket:id="notification" style="float:right; color:red"></span></b>
 	
+	<!-- <a href="#" accessKey="a">shift-alt-a in FF or alt-a in IE</a> -->
+	
 	<wicket:child />
 	
 </wicket:panel>
