saves answer ranges to XML, added <CONTAINS tag

--- a/src/net/sf/egonet/web/panel/OptionsListEditPanel.html
+++ b/src/net/sf/egonet/web/panel/OptionsListEditPanel.html
@@ -6,7 +6,7 @@
 <wicket:panel >
     <div>
     <form wicket:id="outerForm">
-	        <legend>Options Lists for Selection Questions THIS DOES NOT SAVE ANY WORK !!!!!!!</legend>
+	        <legend>Options Lists for Selection Questions</legend>
 	        <table>
 	        <tr><td>
 	        <form wicket:id="titlesForm" >
@@ -32,8 +32,8 @@
 	        	<tr>
 	        	<td align="right">Option Names for</td>
 	        	<td align="left" colspan="2" wicket:id="valuesTitle">XXX</td></tr>
-	        	<tr wicket:id="presetValuesList">
-	        	<td wicket:id="presetValue">name</td>
+	        	<tr wicket:id="presetNamesList">
+	        	<td wicket:id="presetName">name</td>
 	        	<td><a href="#" wicket:id="deleteValueLink">
 	        	<span wicket:id ="deleteValue" >delete</span></a></td>
 	        	<td><a href="#" wicket:id="moveUpLink">
