--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -9,23 +9,31 @@
     	 		<tr>
     	 			<td width="50%">
                         <table>
-                        <tr><td>
+                        <tr><td align="right" >
                         <label for="questionTitleField">Title:</label>
+                        </td><td>
     	 				<input wicket:id="questionTitleField" id="questionTitleField" type="text" />
-                        <br />
+                        </td></tr><tr><td align="right" >
                         <label for="questionResponseTypeField">Response type:</label>
+                        </td><td>
     	 				<select wicket:id="questionResponseTypeField" id="questionResponseTypeField" />
-                        <br />
+                        </td></tr><tr><td align="right" >
                         <label for="questionAnswerReasonField">When to answer question:</label>
+                        </td><td>
     	 				<select wicket:id="questionAnswerReasonField" id="questionAnswerReasonField" />
-                        <br />
+                        </td></tr><tr><td align="right" >
+                        <label for="questionUseIfField">Use If expression:</label>
+                        </td><td>
+                        <input wicket:id="questionUseIfField" id="questionUseIfField" type="text"  size="35"/>
+                        </td></tr><tr><td align="right">
     	 				<label for="askingStyleListField" wicket:id="askingStyleListLabel">Ask with list of alters:</label>
+    	 				</td><td>
     	 				<input wicket:id="askingStyleListField" id= "askingStyleListField" type="checkbox" />
                         </td></tr>
-                        <tr><td>
+                        <tr><td colspan="2">
                             <div wicket:id="numericLimitsPanel"></div>
                         </td></tr>
-                        <tr><td>
+                        <tr><td colspan="2">
                             <div wicket:id="multipleSelectionLimitsPanel"></div>
                         </td></tr>
                         </table>
