--- a/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
@@ -1,3 +1,5 @@
 <wicket:extend>
-	<select wicket:id="answer" />
+	<select wicket:id="answer" /><br /><br />
+<!--	<label for="otherSpecifyTextField" wicket:id="otherSpecifyLabel" >Other Specify: </label> -->
+<!--	<input wicket:id="otherSpecifyTextField" type="text" />  -->
 </wicket:extend>
