Other/Specify option in place

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -30,11 +30,11 @@
     	 				</td><td>
     	 				<input wicket:id="askingStyleListField" id= "askingStyleListField" type="checkbox" />
                         </td></tr>
-<!--                        <tr><td align="right"> -->
-<!--                        <label for="otherSpecifyField" wicket:id="otherSpecifyLabel">Other/Specify Type Question?: </label> -->
-<!--                        </td><td> -->
-<!--                        <input wicket:id="otherSpecifyField" id= "otherSpecifyField" type="checkbox" /> -->
-<!--                        </td></tr> -->
+                        <tr><td align="right"> 
+                        <label for="otherSpecifyField" wicket:id="otherSpecifyLabel">Other/Specify Type Question?: </label> 
+                        </td><td> 
+                        <input wicket:id="otherSpecifyField" id= "otherSpecifyField" type="checkbox" /> 
+                        </td></tr>
                         <tr><td colspan="2">
                             <div wicket:id="numericLimitsPanel"></div>
                         </td></tr>
