--- a/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
@@ -1,5 +1,7 @@
 <wicket:extend>
     	<div wicket:id="checkBoxPrompt" style="color:blue">Check some boxes</div>
-		<span wicket:id="answer">List of options</span>
+		<span wicket:id="answer">List of options</span><br /><br />
+	    <label for="otherSpecifyTextField" wicket:id="otherSpecifyLabel" >Other Specify: </label> 
+	    <input wicket:id="otherSpecifyTextField" type="text" />  
 </wicket:extend>
  
