minor cleanups after phase 1

--- a/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/MultipleSelectionAnswerFormFieldPanel.html
@@ -1,6 +1,6 @@
 <wicket:extend>
     	<div wicket:id="checkBoxPrompt" style="color:blue">Check some boxes</div>
-		<span wicket:id="answer">List of options</span><br /><br />
+		<span wicket:id="answer">List of options</span>
 	    <label for="otherSpecifyTextField" wicket:id="otherSpecifyLabel" >Other Specify: </label> 
 	    <input wicket:id="otherSpecifyTextField" type="text" />  
 </wicket:extend>
