prompts support HTML markup, better error messages

--- a/src/net/sf/egonet/web/panel/InterviewingPanel.html
+++ b/src/net/sf/egonet/web/panel/InterviewingPanel.html
@@ -1,6 +1,7 @@
 <wicket:panel>
 
-	<b><span wicket:id="prompt">How often do _____ and _____ speak with each other?</span></b>
+	<div>Question: <span wicket:id="questionTitle">Question Title</span></div>
+	<span wicket:id="prompt" class="questionText" >How often do _____ and _____ speak with each other?</span>
 
 	<table>
 		<tr wicket:id="questions">
