--- a/src/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -1,8 +1,8 @@
 <wicket:panel>
 	<span wicket:id="checkboxes" style="margin-right:3em;">
 		<span style="white-space:nowrap;">
-			<input wicket:id="checkField" type="checkbox" />
-			<span  wicket:id="checkLabel">Label</span>
+			<input wicket:id="checkField" class="hotkey" type="checkbox" />
+			<span  wicket:id="checkLabel" class="hotkey">Label</span>
 		</span>
 		<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
 	</span>
