Link on question list allows questions to be duplicated.

--- a/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -10,6 +10,7 @@
     		<td wicket:id="questionResponseType">TEXT</td>
     		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
 			<td><a href="#" wicket:id="questionPreview">Preview</a></td>
+			<td><a href="#" wicket:id="questionDuplicate">Duplicate</a></td>
 			<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
 			<td><a href="#" wicket:id="questionSelect"><span wicket:id="questionSelectLabel">Select</span></a></td>
 			<td><a href="#" wicket:id="questionPull">Pull</a></td>
