Hotkeys for checkboxes, DATE and TIME_SPAN answer types

--- a/src/net/sf/egonet/web/panel/CheckboxesPanel.html
+++ b/src/net/sf/egonet/web/panel/CheckboxesPanel.html
@@ -15,7 +15,7 @@
 	<span wicket:id="checkboxes" style="margin-right:3em;">
 		<span style="white-space:nowrap;">
 			<input wicket:id="checkField" class="hotkey" type="checkbox" />
-			<span  wicket:id="checkLabel" class="hotkey">Label</span>
+		    <span  wicket:id="checkLabel" class="hotkey">Label</span>			
 		</span>
 		<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
 	</span>
@@ -25,8 +25,8 @@
 	<span wicket:id="checkboxesVertical" style="margin-right:3em;">
 		<span style="white-space:nowrap;">
 		    <br />
-			<input wicket:id="checkFieldVertical" type="checkbox" />
-			<span  wicket:id="checkLabelVertical">Label</span>
+			<input wicket:id="checkFieldVertical" class="hotkey" type="checkbox" />
+			<span  wicket:id="checkLabelVertical" class="hotkey">Label</span>		
 		</span>
 		<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
 	</span>
