--- a/src/net/sf/egonet/web/panel/DateAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/DateAnswerFormFieldPanel.html
@@ -6,17 +6,13 @@
     <table>
         <tr>
         <td><input wicket:id="Year" type="text" /></td>
-        <td align="left">Year ( 0 or yyyy )</td>
+        <td align="left">Year (yyyy)</td>
         </tr><tr>
-        <td><input wicket:id="Month" type="text" /></td>
-        <td align="left">Month (0 or 1-12 )</td>
+        <td><select wicket:id="Month" /></td>
+        <td align="left">Month</td>
         </tr><tr>
         <td><input wicket:id="Day" type="text" /></td>
-        <td align="left">Day (0 or 1-31 )</td> 
-        </tr><tr>
-        <td colspan="2"><b>Dates</b> should not have any zeros</td>
-        </tr><tr>
-        <td colspan="2"><b>Time Spans</b> can have zeros but at least one non-zero</td>
+        <td align="left">Day (1-31)</td> 
         </tr>
      </table>
     
