--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -35,6 +35,11 @@
                         </td><td> 
                         <input wicket:id="otherSpecifyField" id= "otherSpecifyField" type="checkbox" /> 
                         </td></tr>
+                        <tr><td align="right"> 
+                        <label for="noneButtonField" wicket:id="noneButtonLabel">NONE Button?: </label> 
+                        </td><td> 
+                        <input wicket:id="noneButtonField" id= "noneButtonField" type="checkbox" /> 
+                        </td></tr>         
                         <tr><td colspan="2">
                             <div wicket:id="numericLimitsPanel"></div>
                         </td></tr>
