--- a/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
+++ b/src/net/sf/egonet/web/panel/EditStudyQuestionsPanel.html
@@ -1,26 +1,62 @@
 <wicket:panel>
 	
 	<form wicket:id="questionsContainer">
+<!--
 	<table border="1">
-    	<caption wicket:id="caption">Questions</caption>
+-->
+    	<span wicket:id="caption">Questions</span>
+<!--
     	<tr><th>Title</th><th>Prompt</th><th>Response Type</th><th>Options</th></tr>
-    	<tr wicket:id="questions">
-    		<td><a href="#" wicket:id="questionLink"><span wicket:id="questionTitle">First Name</span></a></td>
-    		<td wicket:id="questionPrompt">What is your first name?</td>
-    		<td wicket:id="questionResponseType">TEXT</td>
-    		<td><a href="#" wicket:id="questionOptionsLink"><span wicket:id="questionOptionsLabel">Options (4)</span></a></td>
-			<td><a href="#" wicket:id="questionPreview">Preview</a></td>
-			<td><a href="#" wicket:id="questionDuplicate">Duplicate</a></td>
-			<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
-			<td><a href="#" wicket:id="questionSelect"><span wicket:id="questionSelectLabel">Select</span></a></td>
-			<td><a href="#" wicket:id="questionPull">Pull</a></td>
-			<td>___</td>
-			<td><a href="#" wicket:id="questionDelete">Delete</a></td>
-    	</tr>
-    	<tr>
-    		<td><a href="#" wicket:id="newQuestion">New question</a></td>
-    	</tr>
+-->
+    	<div wicket:id="questions" style="border:1px solid black; margin: 1em; ">
+    	<div style="float:left">
+    		<a href="#" wicket:id="questionLink">
+    			<span wicket:id="questionTitle">First Name</span>
+    		</a>
+    		<br />
+    		<span wicket:id="questionResponseType">TEXT</span>
+    	</div>
+    		<table style="float:right">
+    			<tr>
+    				<td>
+    					<a href="#" wicket:id="questionOptionsLink">
+    						<span wicket:id="questionOptionsLabel">Options (4)</span>
+    					</a>
+    				</td>
+    				<td><a href="#" wicket:id="questionMoveUp">Move up</a></td>
+    				<td style="color:white">___</td>
+    				<td><a href="#" wicket:id="questionDelete">Delete</a></td>
+    			</tr>
+    			<tr>
+    				<td><a href="#" wicket:id="questionPreview">Preview</a></td>
+    				<td>
+    					<a href="#" wicket:id="questionSelect">
+    						<span wicket:id="questionSelectLabel">Select</span>
+    					</a>
+    				</td>
+    				<td style="color:white">___</td>
+    				<td style="color:white">___</td>
+    			
+    			</tr>
+    			<tr>
+    				<td><a href="#" wicket:id="questionDuplicate">Duplicate</a></td>
+    				<td><a href="#" wicket:id="questionPull">Pull</a></td>
+    				<td style="color:white">___</td>
+    				<td style="color:white">___</td>
+    			</tr>
+    		</table>
+		<div style="margin-left:5em; padding-left:5em; margin-right:5em; padding-right:5em">
+			<span wicket:id="questionPrompt">What is your first name?</span>
+		</div>
+		
+			<div style="clear:both" wicket:id="editor">Editor</div>
+    	</div>
+    	<div>
+    		<span><a href="#" wicket:id="newQuestion">New question</a></span>
+    	</div>
+<!--
     </table>
+-->
     </form>
     
     <form wicket:id="editQuestionPanelContainer">
