Date and Time_Span questions now have the displayed units selecteable

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -46,6 +46,9 @@
                         <tr><td colspan="2">
                             <div wicket:id="multipleSelectionLimitsPanel"></div>
                         </td></tr>
+                       <tr><td colspan="2">
+                            <div wicket:id="timeUnitsPanel"></div>
+                        </td></tr>          
                         </table>
     	 			</td>
     	 			<td width="50%">
